테스트 코드 리팩토링 및 간소화
  - 단위 테스트를 시나리오별로 명확하게 분리
  - 복잡한 엣지 케이스 테스트 제거
  - 핵심 기능 검증에 집중하도록 개선
  - 사용하지 않는 통합 테스트 제거